refactor fetch add pagination

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
     </section>
     <section>
       <ul class="gallery"></ul>
+      <button type="button" class="load-more-btn visually-hidden">
+        Load More
+      </button>
     </section>
 
     <script type="module" src="./main.js"></script>
